examples/test/testpolicy12077.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12077
  namespace: namespace363
spec:
  podSelector:
    matchLabels:
      key49: value14
      key1: value25
      key29: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value29
          key18: value40
          key10: value37
      podSelector:
        matchLabels:
          key33: value6
          key31: value13
          key11: value34
